welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: not found: value vaBiscuit
		vaBiscuit == true;
                ^Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
for (compteur <- 1 to pas) {
              ^